k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      labels:
        io.kompose.network/jarvis-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - image: app
          name: app
          ports:
            - containerPort: 3000
          resources: 
            limits:
              cpu: "1500m"
              memory: 1024Mi
          volumeMounts:
            - mountPath: /home/node/app
              name: app-claim0
      restartPolicy: Always
      volumes:
        - name: app-claim0
          persistentVolumeClaim:
            claimName: app-claim0
