k8s/jarvis-bff-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jarvis-bff
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      labels:
        io.kompose.network/jarvis-default: "true"
        io.kompose.service: jarvis-bff
    spec:
      containers:
        - image: jarvis-bff
          name: jarvis-bff
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "1500m"
              memory: 1024Mi
          volumeMounts:
            - mountPath: /home/node/jarvis-bff
              name: jarvis-bff-claim0
      restartPolicy: Always
      volumes:
        - name: jarvis-bff-claim0
          persistentVolumeClaim:
            claimName: jarvis-bff-claim0
