k8s/jarvis-bff-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jarvis-bff-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/jarvis-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/jarvis-default: "true"
